<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_key_location" translatable="false">location</string>
    <string name="preference_defaultValue_location">Mumbai</string>
    <string name="preference_title_location">Location</string>
    <string name="preference_title_temperature">Temperature</string>
    <string name="preference_key_temperature">temperature</string>
    <string name="preference_dialog_title_temperature">Temperature Units</string>
    <string name="preference_temp_unit_metric">Metric</string>
    <string name="preference_temp_unit_imperial">Imperial</string>
    <string name="menu_show_location">Show Location</string>

</resources>
